<resources>
    <string name="app_name">히얼 와우</string>
    <string name="main_title">낱말카드 목록</string>

    <string name="confirm_txt">정말 하시겠습니까?</string>

    <string name="create_card_title">낱말 카드 만들기</string>
    <string name="create_card_placeholder">단어나 문장을 입력하세요.</string>

    <string name="detail_card_title">낱말 카드</string>
    <string name="detail_card_word">단어나 문장</string>

    <string name="QuizName">퀴즈 문제</string>
    <string name="dialog_create_text_count">(0자/30자)</string>
    <string name="cancel_text">취소</string>
    <string name="confirm_text">확인</string>
    <string name="save_text">저장</string>
    <string name="question_cnt">(풀 문제/전체 문제)</string>
    <string name="close_btn">닫기 버튼</string>

    <string name="word_img">단어 이미지</string>
    <string name="word_text">단어나 문장을 입력하면 이렇게 보입니다.</string>

    <string name="setting_speed_title">음성 재생 속도</string>
    <string name="increase_txt">증가</string>
    <string name="decrease_txt">감소</string>
    <string name="init_speed_txt">0</string>
</resources>