<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/view_round_darknight"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/close_btn"
        android:contentDescription="@string/close_btn" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bmjua"
        android:gravity="center"
        android:text="@string/detail_card_title"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/add_photo_IV"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/add_photo_white"
        android:visibility="gone"
        android:elevation="2dp"
        android:contentDescription="@string/word_img" />

    <TextView
        android:id="@+id/questionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/bmjua"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/detail_card_word" />


<!--    <ImageView-->
<!--        android:id="@+id/play_tts_btn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="59dp"-->
<!--        app:srcCompat="@drawable/play_quiz_btn" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>