<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/view_round_darknight"
    android:gravity="center"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/confirmTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="50dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/nexon_cart_gothic_medium"
        tools:text="@string/quiz_start_instructino" />

    <TextView
        android:id="@+id/quizCntTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="@font/nexon_cart_gothic_medium"
        android:textSize="15sp"
        android:text="@string/question_cnt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/noButton"
            android:background="@drawable/view_round_white2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/cancel_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/nexon_cart_gothic_bold"
            android:textSize="18sp" />

        <android.widget.Button
            android:id="@+id/yesButton"
            android:background="@drawable/view_round_white"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/confirm_text"
            android:textColor="@color/dark_night"
            android:textStyle="bold"
            android:fontFamily="@font/nexon_cart_gothic_bold"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>